--- a/source/Appccelerate.MappingEventBroker/appccelerate.mappingeventbroker.nuspec
+++ b/source/Appccelerate.MappingEventBroker/appccelerate.mappingeventbroker.nuspec
@@ -15,7 +15,6 @@
       Event broker extension for mapping event arguments from one type to another.
     </description>
     <releaseNotes>
-        2.1: built using new build infrastructure (no functional changes)
         2: targets now .Net 4.5
     </releaseNotes>
     <copyright>Copyright 2012-2014</copyright>
@@ -30,9 +29,9 @@
     </dependencies>	
   </metadata>
   <files>
-    <file src="Appccelerate.MappingEventBroker\bin\Release\Appccelerate.MappingEventBroker.dll" target="lib\net45" />
-    <file src="Appccelerate.MappingEventBroker\bin\Release\Appccelerate.MappingEventBroker.pdb" target="lib\net45" />
-    <file src="Appccelerate.MappingEventBroker\bin\Release\Appccelerate.MappingEventBroker.xml" target="lib\net45" />
-    <file src="Appccelerate.MappingEventBroker\**\*.cs" target="src" />
+    <file src="bin\Release\Appccelerate.MappingEventBroker.dll" target="lib\net45" />
+    <file src="bin\Release\Appccelerate.MappingEventBroker.pdb" target="lib\net45" />
+    <file src="bin\Release\Appccelerate.MappingEventBroker.xml" target="lib\net45" />
+    <file src="**\*.cs" target="src" />
   </files>  
 </package>
